--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,37 +14,79 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<title>Bienvenido a Steam</title>
 	</head>
 	<body>
-		<slot />
+		<header class="bg-[#171A21] flex items-center">
+			<div class="flex justify-center items-center">
+				<svg
+					class="w-11 h-11 space-x-1 hover:cursor-pointer"
+					viewBox="0 0 24 24"
+					><path
+						fill="none"
+						stroke="white"
+						stroke-linecap="round"
+						stroke-width="2"
+						d="M5 7h14M5 12h14M5 17h14"></path></svg
+				>
+			</div>
+			<div class="flex justify-center w-full">
+				<img
+					class="h-20"
+					src="https://i.blogs.es/a34507/steam/1366_521.jpg"
+				/>
+			</div>
+		</header>
+		<div>
+			<div
+				class="hover:cursor-pointer relative w-full h-auto object-cover"
+			>
+				<video
+					src="https://shared.akamai.steamstatic.com/store_item_assets/steam/clusters/frontpage/84afb9edc1f6cf8b779de9de/webm_page_bg_spanish.webm?t=1727393025"
+				>
+				</video>
+				<div
+					class="absolute top-6 z-10 bg-[#0c426ed2] flex h-9 w-[65%] justify-between ml-[20%] items-center font-sans list-none px-2 font-medium text-white text-[14px]"
+				>
+					<li><a class="hover:bg-slate-600" href="">Tu tienda</a></li>
+					<li>
+						<a class="hover:bg-slate-600" href=""
+							>Nuevo y destacable</a
+						>
+					</li>
+					<li>
+						<a class="hover:bg-slate-600" href="">Categorias</a>
+					</li>
+					<li>
+						<a class="hover:bg-slate-600" href=""
+							>Tienda de puntos</a
+						>
+					</li>
+					<li><a class="hover:bg-slate-600" href="">Noticas</a></li>
+					<li>
+						<a class="hover:bg-slate-600" href="">Laboratorios</a>
+					</li>
+					<input
+						class="ml-10 mr-1 bg-[#232d63] text-[#161d24] h-6 rounded-md"
+						type="text"
+						placeholder="buscar"
+					/>
+				</div>
+			</div>
+		</div>
+		<div class="bg-[#1A2A3C]">
+			<div class="mx-16 items-center text-pretty">
+				<img
+					class="h-20"
+					src="https://store.akamai.steamstatic.com/public/images//gift/steamcards_promo_03.png?v=1"
+				/>
+				<h1
+					class="text-cyan-800 hover:text-white font-sans list-none font-medium"
+				>
+					TARJETAS DE REGALO STEAM
+					<p>Regala diversión</p>
+				</h1>
+			</div>
+		</div>
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
